--- a/docker/services/services.yaml
+++ b/docker/services/services.yaml
@@ -68,6 +68,8 @@ outputs:
       step_config:
         {get_attr: [PuppetServices, role_data, step_config]}
       puppet_tags: {list_join: [",", {get_attr: [ServiceChain, role_data, puppet_tags]}]}
+      kolla_config:
+        map_merge: {get_attr: [ServiceChain, role_data, kolla_config]}
       docker_config:
         step_1: {map_merge: {get_attr: [ServiceChain, role_data, docker_config, step_1]}}
         step_2: {map_merge: {get_attr: [ServiceChain, role_data, docker_config, step_2]}}
