--- a/environments/docker.yaml
+++ b/environments/docker.yaml
@@ -1,28 +1,19 @@
 resource_registry:
-  # Docker container with heat agents for containerized compute node.
-  OS::TripleO::Compute::NodeUserData: ../docker/firstboot/install_docker_agents.yaml
+  OS::TripleO::Compute::NodeUserData: ../docker/firstboot/setup_docker_host.yaml
+
+  #NOTE (dprince) add roles to be docker enabled as we support them
   OS::TripleO::Services::NovaLibvirt: ../docker/services/nova-libvirt.yaml
   OS::TripleO::Services::ComputeNeutronOvsAgent: ../docker/services/neutron-ovs-agent.yaml
   OS::TripleO::Services::NovaCompute: ../docker/services/nova-compute.yaml
-  # NOTE (dprince) here we set new roles to be docker enabled as we add support
-  #OS::TripleO::ComputePostDeploySteps: ../docker/post.yaml
-  # NOTE (mandre) Defining per role post deploy steps doesn't work yet
-  # Set a global PostDeploySteps that works for both containerized and
-  # non-containerized roles
+
   OS::TripleO::PostDeploySteps: ../docker/post.yaml
   OS::TripleO::Services: ../docker/services/services.yaml
 
 parameter_defaults:
   # Defaults to 'tripleoupstream'.  Specify a local docker registry
-  # Example: 192.0.2.1:8787/tripleoupstream
+  # Example: 192.168.24.1:8787/tripleoupstream
   DockerNamespace: tripleoupstream
-  # Enable local Docker registry
   DockerNamespaceIsRegistry: false
-  DockerAgentImage: heat-docker-agents:newton
-  # Docker containers
-  DockerNovaComputeImage: centos-binary-nova-compute:newton
-  DockerLibvirtImage: centos-binary-nova-libvirt:newton
-  DockerOpenvswitchImage: centos-binary-neutron-openvswitch-agent:newton
 
   ComputeServices:
     - OS::TripleO::Services::NovaCompute
