Heat engine settings required for Undercloud
This patch adds several new heat engine setting that are required
in order to configure a fully working Heat engine in the undercloud.

New parameters have been added for the max resources and convergence
settings. I've hard coded the max stack depth at 6 which matches our
undercloud and should be fine as a default setting I think (would
rarely need overridden).

Change-Id: I335476f46b4bea4b9f3ac70a6312a7e906f43ba6

--- a/puppet/services/heat-engine.yaml
+++ b/puppet/services/heat-engine.yaml
@@ -48,6 +48,15 @@ parameters:
     default:
       tag: openstack.heat.engine
       path: /var/log/heat/heat-engine.log
+  HeatConvergenceEngine:
+    type: boolean
+    default: true
+    description: Enables the heat engine with the convergence architecture.
+  HeatMaxResourcesPerStack:
+    type: number
+    default: 1000
+    description: Maximum resources allowed per top-level stack. -1 stands for unlimited.
+
 
 resources:
   HeatBase:
@@ -72,6 +81,8 @@ outputs:
           - heat::engine::num_engine_workers: {get_param: HeatWorkers}
             heat::engine::configure_delegated_roles: false
             heat::engine::trusts_delegated_roles: []
+            heat::engine::max_nested_stack_depth: 6
+            heat::engine::max_resources_per_stack: {get_param: HeatMaxResourcesPerStack}
             heat::engine::heat_metadata_server_url:
               list_join:
                 - ''
@@ -89,6 +100,7 @@ outputs:
                   - ':'
                   - {get_param: [EndpointMap, HeatCfnPublic, port]}
                   - '/v1/waitcondition'
+            heat::engine::convergence_engine: {get_param: HeatConvergenceEngine}
             tripleo::profile::base::heat::manage_db_purge: {get_param: HeatEnableDBPurge}
             heat::database_connection:
               list_join:
