puppet/role.role.j2.yaml has invalid get_resource reference
Found this today when rebasing the undercloud installer.
The puppet/role.role.j2.yaml Yaml has an invalid get_resource reference
that causes a cryptic heat stack failures.

Change-Id: Icfb7d73a1c4d02213b23a427605f2b0d5eaa984f

--- a/puppet/role.role.j2.yaml
+++ b/puppet/role.role.j2.yaml
@@ -362,7 +362,7 @@ resources:
   PreNetworkConfig:
     type: OS::TripleO::{{role}}::PreNetworkConfig
     properties:
-      server: {get_resource: {{role}}}}
+      server: {get_resource: {{role}}}
 
   NetworkDeployment:
     type: OS::TripleO::SoftwareDeployment
