--- a/roles_data.yaml
+++ b/roles_data.yaml
@@ -101,6 +101,7 @@
     - OS::TripleO::Services::PankoApi
     - OS::TripleO::Services::Zaqar
     - OS::TripleO::Services::OVNDBs
+    - OS::TripleO::Services::NeutronML2FujitsuCfab
 
 - name: Compute
   CountDefault: 1
