Update net-config-noop to use apply-config
Some deployments of the undercloud would like to use
net-config-noop (to disable all network configuration).
This patch changes this noop software deployment to use
'apply-config' instead of 'os-apply-config' which allows it
to work with the undercloud installer which only supports the
newer (apply-config) style due to heat signalling requirements.

Change-Id: If7b579b759477afd81ad64a4847169e59ddcbd77

--- a/net-config-noop.yaml
+++ b/net-config-noop.yaml
@@ -38,8 +38,8 @@ resources:
   OsNetConfigImpl:
     type: OS::Heat::StructuredConfig
     properties:
-      group: os-apply-config
-      config:
+      group: apply-config
+      config: {}
 
 outputs:
   OS::stack_id:
