Correct typo in ManagementAllocationPools in network-environment.yaml
There was a comma after 'end' in ManagementAllocationPools that causes
a failure if using this parameter straight without modification.
Replaced comma with colon.

Closes-Bug: 1655204

Change-Id: Ic25606ea0b6637fcd33f1375f34a6486eda2af85
Signed-off-by: Kevin Jones <kevinjones@redhat.com>

--- a/environments/network-environment.yaml
+++ b/environments/network-environment.yaml
@@ -43,7 +43,7 @@ parameter_defaults:
   ExternalInterfaceDefaultRoute: 10.0.0.1
   # Uncomment if using the Management Network (see network-management.yaml)
   # ManagementNetCidr: 10.0.1.0/24
-  # ManagementAllocationPools: [{'start': '10.0.1.10', 'end', '10.0.1.50'}]
+  # ManagementAllocationPools: [{'start': '10.0.1.10', 'end': '10.0.1.50'}]
   # Use either this parameter or ControlPlaneDefaultRoute in the NIC templates
   # ManagementInterfaceDefaultRoute: 10.0.1.1
   # Define the DNS servers (maximum 2) for the overcloud nodes
